# codex-render-visuals

./: .gitignore  README.md  pyproject.toml
codex-visuals/: SKILL.md
codex-visuals/agents/: openai.yaml
codex-visuals/references/: chart-patterns.md  client-compatibility.md  design-system.md  diagram-patterns.md  quality-checklist.md
codex-visuals/scripts/: export_svg_png.py  install-skill-from-repo.ps1  install-skill-from-repo.sh  quick_validate.py  render_smoke_svg.py  validate_svg.py  write_visual.py
examples/: api-request-lifecycle.mmd  catalog.json  prompts.md
tests/: test_examples_contract.py  test_export_svg_png.py  test_quick_validate.py  test_render_smoke_svg.py  test_write_visual.py
